
  * debian/control:
    - Update to follow style like other indicator packages: use trailing commas
      at the end of lists.
    - Reorganize Build-Depends for clarity.
    - Drop Build-Depends on cdbs, bump debhelper to (>= 9). 
    - Update Vcs-Bzr and Vcs-Browser, add a notice for uploaders.
  * debian/compat: bump compat level to 9.

 -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Fri, 16 Nov 2012 15:17:20 -0500

indicator-datetime (12.10.2-0ubuntu4) raring; urgency=low

  * Backported r192 and r193, fix:
    - "shows all-day events one day too early" (lp: #1000182)
    - "Bogus insensitive events after clicking on different date"
       (lp: #1069177)

 -- Sebastien Bacher <seb128@ubuntu.com>  Mon, 05 Nov 2012 17:23:13 +0100

indicator-datetime (12.10.2-0ubuntu3) quantal; urgency=low

  * Backport "fix off-by-one error" leading to have the settings item run
    the calendar application rather than the control center (lp: #1064375)

 -- Sebastien Bacher <seb128@ubuntu.com>  Tue, 09 Oct 2012 19:35:18 +0200

indicator-datetime (12.10.2-0ubuntu2) quantal; urgency=low

  * Backport fix from Lars for a missing NULL check leading to segfault
    (lp: #1061867)

 -- Sebastien Bacher <seb128@ubuntu.com>  Fri, 05 Oct 2012 17:24:16 +0200

indicator-datetime (12.10.2-0ubuntu1) quantal; urgency=low

  * New upstream release:
    - Fix 12.10.0 appointment calendar regression. (LP: #1060263)

 -- Sebastien Bacher <seb128@ubuntu.com>  Thu, 04 Oct 2012 17:53:56 +0200

indicator-datetime (12.10.1-0ubuntu1) quantal; urgency=low

  * New upstream release.
    - Gracefully handle clock skew (LP: #917236)
    - Raise the version number of our EDS dependency (LP: #1024437)
    - Fix X-Ubuntu-Gettext-Domain entries in the .desktop file (LP: #1048834)
    - Remove unnecessary watching for geoclue address provider changes
  * build-dep on newer e-d-s stack

 -- Didier Roche <didrocks@ubuntu.com>  Thu, 20 Sep 2012 18:51:34 +0200
