@@ -1,18 +1,18 @@
 #!/usr/bin/make -f
 
-include /usr/share/cdbs/1/rules/patchsys-quilt.mk
-include /usr/share/cdbs/1/rules/autoreconf.mk
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/gnome.mk
-
-DEB_CONFIGURE_EXTRA_FLAGS = --disable-static
-
 LDFLAGS += -Wl,-z,defs -Wl,--as-needed
 
-common-install-arch::
+%:
+	dh $@ --with quilt,autoreconf
+
+override_dh_auto_configure:
+	dh_auto_configure -- --disable-static
+
+override_dh_install:
 	find debian/indicator-datetime -name \*.la -delete
 	find debian/indicator-datetime -name \*.a -delete
 	cd po; intltool-update --pot --verbose
+	dh_install --fail-missing
 	# Language packs
 	for d in $$(find debian/indicator-datetime -type f \( -name "*.desktop" -o -name "*.directory" \) ); do \
 		sed -ri '/^(Name|GenericName|Comment|X-GNOME-FullName)\[/d' $$d; \
